<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">COISABOA</string>
    <string name="btn_login">Login</string>
    <string name="btn_produtos">Produtos</string>
    <string name="btn_vendas">Vendas</string>
    <string name="btn_compras">Compras</string>
    <string name="btn_relatorios">Relatórios</string>
    <string name="btn_backup">Backup</string>
    <string name="hint_usuario">Usuário</string>
    <string name="hint_senha">Senha</string>
</resources>
