<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:padding="24dp">

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:hint="@string/hint_usuario" android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:hint="@string/hint_senha" android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnDoLogin"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/btn_login" android:layout_marginTop="16dp"/>
</LinearLayout>